tests/parsing/smtlib/v2.7/errors/016_sorted_var_bad_sort_2.smt2
(set-logic ALL)
(assert (forall ((x !)) (= x 1)))
